# simple-loader

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/simple_loader/: __init__.py
